add recipient list for reply and message search filter

--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -280,7 +280,7 @@ Konversation im Messenger suchen:
 
 . Öffne das Menü *CRM » Messenger (Testphase)*. +
 * *_Möglichkeit 1:_* Klicke auf material:search[], um eine Liste aller Konversationen zu sehen.
-* *_Möglichkeit 2:_* Gib einen Suchbegriff aus dem Betreff der Konversation im Suchfeld ein und wähle dann den passenden Filter aus der Vorschlagsliste. 
+* *_Möglichkeit 2:_* Gib einen Suchbegriff aus dem Betreff der Konversation oder dem Inhalt der Nachricht im Suchfeld ein und wähle dann den passenden Filter aus der Vorschlagsliste. 
 * *_Möglichkeit 3:_* Klicke auf material:tune[], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen.
 . Beachte die Erläuterungen zu den Filtern in <<#table-search-message>>.
 
@@ -292,6 +292,9 @@ Konversation im Messenger suchen:
 
 |[#intable-filter-subject]*Betreff*
 |Gib ein Wort ein, um nach Konversationen zu suchen, die diesen Begriff im Betreff enthalten.
+
+|[#intable-filter-message]*Nachricht*
+|Gib ein Wort ein, um nach Inhalten zu suchen, die in der Nachricht enthalten sind.
 
 |[#intable-filter-short-id]*Abgekürzte ID*
 |Gib die ID der Konversation ein, um nach der Konversation mit genau dieser ID zu suchen.
@@ -474,13 +477,15 @@ Die xref:payment:beta-zahlungen-verwalten-neu.adoc#[Zahlung] hat eine direkte Ve
 [#auf-nachricht-antworten]
 == Auf eine bestehende Nachricht antworten
 
-Suche die <<#konversation-suchen, Konversation>>, die die Nachricht enthält, auf die du antworten möchtest. Klicke dann auf die Nachricht, um darauf zu antworten.
+Suche die <<#konversation-suchen, Konversation>>, die die Nachricht enthält, auf die du antworten möchtest. Klicke dann auf die Nachricht, um darauf zu antworten. Beim Antworten auf eine bestehende Nachricht siehst du alle Empfänger:innen, die diese Nachricht erhalten. Du kannst weitere Empfänger:innen hinzufügen. Falls gewünscht, wähle aus der Dropdown-Liste *Vorlage* eine Vorlage und eine Vorlagensprache.
 
 Der einzige Unterschied zum <<#nachricht-erstellen, Erstellen einer Nachricht>> ist, dass du beim Antworten auf eine bestehende Nachricht über das Symbol material:more_vert[] den Betreff ein- und ausblenden kannst (siehe <<#image-messenger-reply-to-message>>). 
 
 [[image-messenger-reply-to-message]]
 .Auf eine bestehende Nachricht antworten
 image::crm:messenger-auf-nachricht-antworten.png[width=640, height=360]
+
+// TODO: Screenshot erneuern
 
 Du kannst den Betreff anpassen, wenn die Option *Betreff* aktiviert ist (material:toggle_on[role=skyBlue]). Wenn du die Option *Betreff* _nicht_ aktiviert hast (material:toggle_off[]), ist das Feld *Betreff* beim Antworten auf die Nachricht nicht sichtbar. Der aktuell gewählte Betreff wird dann beim Antworten auf die Nachricht automatisch übernommen.
 
