--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -894,17 +894,17 @@ Im Gegensatz zu anderen Marktplätzen können Retouren für Kaufland noch nicht 
 [#1000]
 == Log abrufen
 
-:market: Kaufland.de
+:market: Kaufland
 include::partial$logs_abrufen.adoc[tag=data-log-intro]
 
-* *Identifikator* » *Kaufland.de*
+* *Identifikator* » *Kaufland*
 
 include::partial$logs_abrufen.adoc[tag=data-log-config]
 
 Nutze optional die in <<#tabelle-referenztypen>> aufgeführten Referenztypen und Referenzwerte, um die Suchergebnisse weiter einzugrenzen:
 
 [[tabelle-referenztypen]]
-.Referenztypen und Referenzwerte für Kaufland.de
+.Referenztypen und Referenzwerte für Kaufland
 [cols="1,3,3"]
 |===
 |Referenztyp |Erläuterung |Referenzwerte
