--- a/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
@@ -889,22 +889,22 @@ _or_
 [#returns]
 === Returns for Kaufland
 
-Unlike other marketplaces, you cannot send returns to Kaufland with an event procedure via plentymarkets yet. Process returns for Kaufland directly in your Kaufland.de seller account.
+Unlike other marketplaces, you cannot send returns to Kaufland with an event procedure via plentymarkets yet. Process returns for Kaufland directly in your Kaufland seller account.
 
 [#1000]
 == Viewing the log
 
-:market: Kaufland.de
+:market: Kaufland
 include::partial$viewing_logs.adoc[tag=data-log-intro]
 
-* *Identifier* » *Kaufland.de*
+* *Identifier* » *Kaufland*
 
 include::partial$viewing_logs.adoc[tag=data-log-config]
 
 Use the reference types and reference values listed in <<#table-reference-types>> to limit the search results:
 
 [[table-reference-types]]
-.Reference types and reference values for Kaufland.de
+.Reference types and reference values for Kaufland
 [cols="1,3,3"]
 |===
 |Reference type |Explanation |Reference value
