Update icons payment pages

--- a/docs/de-de/modules/payment/pages/lastschrift.adoc
+++ b/docs/de-de/modules/payment/pages/lastschrift.adoc
@@ -35,7 +35,7 @@ Sprachdateien anpassen:
 . Wähle auf der rechten Seite die *Zielsprache* aus der Dropdown-Liste.
 . Klappe im Bereich *Debit* die Sektionen *Bankdaten*, *Reinitialisierung* und *Zahlungsart* aus.
 . Gib im Bereich der Zielsprache die gewünschten Texte für die einzelnen Sprachelemente ein.
-. Speichere (icon:save[role=green]) die Einstellungen.
+. Speichere (material:save[]) die Einstellungen.
 . Stelle das Plugin-Set erneut bereit, um die Änderungen zu übernehmen.
 
 Über die Auswahl *Deutsch* als *Zielsprache*, kannst du die deutschen Benennungen für deinen Webshop anpassen. Die gewählten Benennungen werden dann auch im Backend übernommen, allerdings bleibt der Zusatz _Plugin_. So bleibt die Zugehörigkeit einer Zahlungsart nachvollziehbar. Lade das Backend neu, um die Änderungen sehen zu können.
