--- a/docs/de-de/modules/payment/pages/paypal.adoc
+++ b/docs/de-de/modules/payment/pages/paypal.adoc
@@ -143,7 +143,7 @@ Container verknüpfen:
 . Wähle aus der Dropdown-Liste den Datenanbieter, den du verknüpfen möchtest.
 . Wähle den Container, mit dem du den Datenanbieter verknüpfen möchtest. Beachte dazu die Erläuterungen in <<table-paypal-template-container-v6>>.
 . Wiederhole Schritte 5 und 6 für alle Datenanbieter, die du verknüpfen möchtest.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
+. *Speichere* (material:save[]) die Einstellungen.
 
 [[table-paypal-template-container-v6]]
 .Container verknüpfen
@@ -172,7 +172,7 @@ Container verknüpfen:
 . Wähle aus der Dropdown-Liste den Datenanbieter, den du verknüpfen möchtest.
 . Wähle den Container, mit dem du den Datenanbieter verknüpfen möchtest. Beachte dazu die Erläuterungen in <<table-paypal-template-container-v5>>.
 . Wiederhole Schritte 5 und 6 für alle Datenanbieter, die du verknüpfen möchtest.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
+. *Speichere* (material:save[]) die Einstellungen.
 
 [[table-paypal-template-container-v5]]
 .Container verknüpfen
@@ -410,7 +410,7 @@ Sprachdateien anpassen:
 . Wähle auf der rechten Seite die *Zielsprache* aus der Dropdown-Liste.
 . Klappe im Bereich *PayPal* die verschiedenen Bereiche aus.
 . Gib im Bereich der Zielsprache die gewünschten Texte für die einzelnen Sprachelemente ein.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
+. *Speichere* (material:save[]) die Einstellungen.
 . Stelle das Plugin-Set erneut bereit, um die Änderungen zu übernehmen.
 
 Über die Auswahl *Deutsch* als *Zielsprache* kannst du die deutschen Benennungen für deinen Webshop anpassen. Die gewählten Benennungen werden dann auch im Backend übernommen, allerdings bleibt der Zusatz _Plugin: PayPal_. So bleibt die Zugehörigkeit einer Zahlungsart nachvollziehbar. Lade das Backend neu, um die Änderungen sehen zu können.
