--- a/docs/en-gb/modules/payment/pages/currencies.adoc
+++ b/docs/en-gb/modules/payment/pages/currencies.adoc
@@ -17,7 +17,7 @@ Defining the system currency:
 
 . Go to *Setup » Orders » Payment » Currencies*.
 . Select a currency for the option *Standard currency*.
-. *Save* (icon:save[role="green"]) the settings.
+. *Save* (material:save[]) the settings.
 
 [IMPORTANT]
 .System currency vs. online shop currency
@@ -36,7 +36,7 @@ Converting currencies:
 
 . Go to *Setup » Orders » Payment » Currencies*.
 . Carry out the settings according to <<#table-settings-currency>>.
-. *Save* (icon:save[role="green"]) the settings.
+. *Save* (material:save[]) the settings.
 
 [[table-settings-currency]]
 .Currency settings
