--- a/docs/en-gb/modules/payment/pages/ebics.adoc
+++ b/docs/en-gb/modules/payment/pages/ebics.adoc
@@ -104,7 +104,7 @@ Creating an account:
 . Click on *Create new account* (icon:plus-square[role="green"]). +
 → The *Create new account* window opens.
 . Carry out the settings according to <<table-ebics-account-settings>>.
-. *Save* (icon:save[role="green"]) the settings. +
+. *Save* (material:save[]) the settings. +
 → The account is created.
 
 [[table-ebics-account-settings]]
@@ -169,7 +169,7 @@ Editing the account
 . Click on *Edit* to open the account. +
 → The window *Account settings* is opened.
 . Carry out the settings. Pay attention to the explanations given in <<table-ebics-settings>>.
-. *Save* (icon:save[role="green"]) the settings.
+. *Save* (material:save[]) the settings.
 
 [IMPORTANT]
 .Domain transfer
@@ -311,7 +311,7 @@ Managing transactions:
 → The window *Account settings* is opened.
 . Click on *Transactions*.
 . Carry out the settings according to <<table-ebics-settings-transactions>>.
-. *Save* (icon:save[role="green"]) the settings.
+. *Save* (material:save[]) the settings.
 
 [[table-ebics-settings-transactions]]
 .Managing settings for business transactions
@@ -356,7 +356,7 @@ Loading inactive transactions:
 . Click on *Search*. +
 → All payments for the selected date which do not fall under the activated transactions are displayed.
 . Select the transactions you want to activate.
-. *Save* (icon:save[role="green"]) the settings. +
+. *Save* (material:save[]) the settings. +
 → The transactions are activated.
 
 To assign the payments, execute the Manual payment retrieval as described above. All future payments are automatically assigned.
