--- a/docs/en-gb/modules/payment/pages/online-bank-transfer.adoc
+++ b/docs/en-gb/modules/payment/pages/online-bank-transfer.adoc
@@ -33,7 +33,7 @@ Linking the merchant account:
 . Enter the Configuration key. +
 → You get this key during the registration process.
 . Carry out further settings in the *Extended settings* area.
-. *Save* (icon:save[role="green"]) the settings.
+. *Save* (material:save[]) the settings.
 
 [[table-plugin-settings]]
 .Linking template containers
