--- a/docs/de-de/modules/payment/pages/nachnahme.adoc
+++ b/docs/de-de/modules/payment/pages/nachnahme.adoc
@@ -38,7 +38,7 @@ Zahlungsart in Kundenklasse erlauben:
 . Öffne das Menü *Einrichtung » CRM » Kundenklassen*.
 . Öffne die Kundenklasse, in der die Zahlungsart erlaubt werden soll.
 . Wähle die Zahlungsart aus der Liste im Bereich *Erlaubte Zahlungsarten* durch Anklicken aus.
-. Speichere (icon:save[role=green]) die Einstellungen.
+. Speichere (material:save[]) die Einstellungen.
 
 Wiederhole dies ggf. für weitere Kundenklassen.
 
@@ -55,7 +55,7 @@ Details zur Zahlungsart einrichten:
 . Öffne das Menü *Konfiguration » Einstellungen*.
 . Gib unter *Name* den Namen ein, der für die Zahlungsart im Webshop angezeigt werden soll.
 . Gib unter Logo-URL eine https-URL ein, die zum Logo-Bild führt. Gültige Dateiformate sind .gif, .jpg oder .png. Die Maximalgröße beträgt 190 Pixel in der Breite und 60 Pixel in der Höhe.
-. Speichere (icon:save[role=green]) die Einstellungen. +
+. Speichere (material:save[]) die Einstellungen. +
 → Name und Logo der Zahlungsart werden im Bestellvorgang des Webshops angezeigt.
 
 [#50]
@@ -71,7 +71,7 @@ Sprachdateien anpassen:
 . Wähle auf der rechten Seite die *Zielsprache* aus der Dropdown-Liste.
 . Klappe im Bereich *CashOnDelivery* die Sektion *Fehlermeldungen* aus.
 . Gib im Bereich der Zielsprache die gewünschten Texte für die einzelnen Sprachelemente ein.
-. Speichere (icon:save[role=green]) die Einstellungen.
+. Speichere (material:save[]) die Einstellungen.
 . Stelle das Plugin-Set erneut bereit, um die Änderungen zu übernehmen.
 
 Über die Auswahl *Deutsch* als *Zielsprache*, kannst du die deutschen Benennungen für deinen Webshop anpassen. Die gewählten Benennungen werden dann auch im Backend übernommen, allerdings bleibt der Zusatz _Plugin_. So bleibt die Zugehörigkeit einer Zahlungsart nachvollziehbar. Lade das Backend neu, um die Änderungen sehen zu können.
