--- a/docs/de-de/modules/payment/pages/payone.adoc
+++ b/docs/de-de/modules/payment/pages/payone.adoc
@@ -33,7 +33,7 @@ Einstellungen im Payone Merchant Interface vornehmen:
 . Öffne das Tab *Erweitert* des Zahlungsportals deines Webshops.
 . Trage im Feld *TransactionStatusURL* eine URL nach dem Schema *DOMAIN/payment/payone/status* ein. Den Platzhalter *DOMAIN* durch die URL zu deinem Webshop ersetzen.
 . Wähle als Verfahren *Hashwert-Prüfung* die Option *md5 oder sha2-384 (für Migration)*.
-. *Speichere* (icon:save[role=green]) die Einstellungen.
+. *Speichere* (material:save[]) die Einstellungen.
 
 [#20]
 == Ausführung des Assistenten
@@ -111,7 +111,7 @@ Anpassen der ShopBuilder-Seite für Checkout:
 . Wähle das Widget *Adressauswahl* aus.
 . Klicke auf *Einstellungen* (icon:cog[]) dieses Widgets.
 . Wähle unter *Rechnungs- und Lieferadresse anzeigen* die benötigten Adressfelder aus.
-. *Speichere* (icon:save[role=green]) die Einstellungen.
+. *Speichere* (material:save[]) die Einstellungen.
 
 Im Bereich Webshop des Handbuchs findest du weitere Erklärungen zum Umgang mit dem xref:webshop:shop-builder.adoc[ShopBuilder] allgemein und der Widget-Kategorie xref:webshop:shop-builder.adoc#85[Kundendaten].
 
@@ -131,7 +131,7 @@ plentyShop Checkout für Adressdaten anpassen:
 . Wähle unter *Konfiguration* den Punkt *Kaufabwicklung und Mein Konto* aus.
 . Klappe den Bereich *Rechnungsadressfelder im Adressformular anzeigen (DE)* auf.
 . Aktiviere über die Checkbox die benötigten Optionen, wie z.B. *Geburtsdatum* und *Telefonnummer*.
-. *Speichere* (icon:save[role=green]) die Einstellungen.
+. *Speichere* (material:save[]) die Einstellungen.
 
 Im Checkout werden deinen Kund:innen nun die Felder zur Eingabe der ausgewählten Adressdaten angezeigt.
 
@@ -170,7 +170,7 @@ Container verknüpfen:
 . Wähle aus der Dropdown-Liste den Datenanbieter aus, den du verknüpfen möchtest.
 . Wähle den Container aus, mit dem du den Datenanbieter verknüpfen möchtest. Beachte dazu die Erläuterungen in <<#tabelle-container-verknüpfen>>.
 . Wiederhole Schritte 5 und 6 für alle Datenanbieter, die du verknüpfen möchtest.
-. *Speichere* (icon:save[role=green]) die Einstellungen.
+. *Speichere* (material:save[]) die Einstellungen.
 
 [[tabelle-container-verknüpfen]]
 .Container verknüpfen
