--- a/docs/de-de/modules/payment/pages/vorkasse.adoc
+++ b/docs/de-de/modules/payment/pages/vorkasse.adoc
@@ -36,7 +36,7 @@ Bankdaten verknüpfen:
 . Wähle aus der *Data-Provider* Dropdown-Liste *Cash in advance bank details* aus.
 . Aktiviere den Container *Order confirmation: Additional payment information*.
 → Der Container ist als deprecated markiert, dies bezieht sich aber nur auf den ShopBuilder. Du kannst die Auswahl für den plentyShop LTS treffen.
-. *Speichere* (icon:save[role=green]) die Einstellungen. +
+. *Speichere* (material:save[]) die Einstellungen. +
 → Die Bankdaten werden auf der Bestellbestätigungsseite angezeigt.
 
 [#50]
@@ -59,7 +59,7 @@ Zahlungsart neu ausführen:
 → Kund:innen können auf der Bestellbestätigungsseite die Zahlung neu ausführen.
 . Wähle den Data-Provider *Cash in advance Reinitialise Payment Script*.
 . Aktiviere den Container *Script loader: After scripts loaded*.
-. *Speichere* (icon:save[role=green]) die Einstellungen.
+. *Speichere* (material:save[]) die Einstellungen.
 
 [#60]
 == Logo durch Template-Container verknüpfen
@@ -76,7 +76,7 @@ Logo verknüpfen:
 . Wähle den Bereich *Container-Links* aus.
 . Wähle aus der *Data-Provider* Dropdown-Liste *Cash in advance icon* aus.
 . Aktiviere den Container *Homepage: Payment method container*.
-. *Speichere* (icon:save[role=green]) die Einstellungen. +
+. *Speichere* (material:save[]) die Einstellungen. +
 → Das Logo der Zahlungsart wird auf der Startseite deines Webshops angezeigt.
 
 [#70]
@@ -92,7 +92,7 @@ Sprachdateien anpassen:
 . Wähle auf der rechten Seite die *Zielsprache* aus der Dropdown-Liste.
 . Klappe im Bereich *PrePayment* die Sektionen *Bankdaten*, *Reinitialisierung*, *Verwendungszweck* und *Zahlungsart* aus.
 . Gib im Bereich der Zielsprache die gewünschten Texte für die einzelnen Sprachelemente ein.
-. Speichere (icon:save[role=green]) die Einstellungen.
+. Speichere (material:save[]) die Einstellungen.
 . Stelle das Plugin-Set erneut bereit, um die Änderungen zu übernehmen.
 
 Über die Auswahl *Deutsch* als *Zielsprache*, kannst du die deutschen Benennungen für deinen Webshop anpassen. Die gewählten Benennungen werden dann auch im Backend übernommen, allerdings bleibt der Zusatz _Plugin_. So bleibt die Zugehörigkeit einer Zahlungsart nachvollziehbar. Lade das Backend neu, um die Änderungen sehen zu können.
