--- a/docs/en-gb/modules/payment/pages/cash-in-advance.adoc
+++ b/docs/en-gb/modules/payment/pages/cash-in-advance.adoc
@@ -35,7 +35,7 @@ Linking bank details:
 . Expand the area *Container links*.
 . Select *Cash in advance bank details* from the *Data provider* drop-down list.
 . Activate the container *Order confirmation: Additional payment information*.
-. *Save* (icon:save[role="green"]) the settings. +
+. *Save* (material:save[]) the settings. +
 → The bank details are displayed on the order confirmation page of your online shop.
 
 [#50]
@@ -58,7 +58,7 @@ Initialising payment again:
 → Customers can now initialise the payment again from the order confirmation page.
 . Select the data provider *Cash in advance Reinitialize Payment Script*.
 . Activate the container *Script loader: After scripts loaded*.
-. *Save* (icon:save[role="green"]) the settings.
+. *Save* (material:save[]) the settings.
 
 [#60]
 == Linking the logo with template containers
@@ -76,7 +76,7 @@ Linking logo:
 . Select *Cash in advance icon* from the *Data provider* drop-down list.
 . Activate the container *Homepage: Payment method container*. +
 → This container is marked as deprecated. As this is only related to the ShopBuilder, you can still make this selection for the plentyShop LTS.
-. *Save* (icon:save[role="green"]) the settings. +
+. *Save* (material:save[]) the settings. +
 → The logo of the payment method Cash in advance will be displayed on the homepage of your online shop.
 
 [#70]
@@ -92,7 +92,7 @@ Adapting language files:
 . On the right side, select the *Target language* from the drop-down list.
 . Expand the sections *bank data*, *designated use*, *payment method* and *reinitialization* in the *PrePayment* area.
 . Enter the text for the individual text elements in the area of the target language.
-. Save (icon:save[role="green"]) the settings.
+. Save (material:save[]) the settings.
 . Deploy the plugin set again to apply these changes.
 
 By selecting *German* as the *Target language*, you can adapt the German labels for your online shop. The selected labels are then also applied in the back end, only the addition _Plugin_ remains. This way, it remains traceable where a payment method comes from. Reload the back end to see the changes.
