--- a/docs/en-gb/modules/payment/pages/debit.adoc
+++ b/docs/en-gb/modules/payment/pages/debit.adoc
@@ -35,7 +35,7 @@ Adapting language files:
 . On the right side, select the *Target language* from the drop-down list.
 . Expand the sections *bank data*, *payment method* and *reinitialization* in the *Debit* area.
 . Enter the text for the individual text elements in the area of the target language.
-. Save (icon:save[role="green"]) the settings.
+. Save (material:save[]) the settings.
 . Deploy the plugin set again to apply these changes.
 
 By selecting *German* as the *Target language*, you can adapt the German labels for your online shop. The selected labels are then also applied in the back end, only the addition _Plugin_ remains. This way, it remains traceable where a payment method comes from. Reload the back end to see the changes.
