--- a/docs/en-gb/modules/payment/pages/paypal.adoc
+++ b/docs/en-gb/modules/payment/pages/paypal.adoc
@@ -137,7 +137,7 @@ Linking template containers:
 . From the drop-down list, select the data provider you want to link.
 . Select the container you want to link to the data provider. Pay attention to the explanations given in <<table-paypal-template-container-v6>>.
 . Repeat steps 5 and 6 for all data providers you want to link to containers.
-. *Save* (icon:save[role="green"]) the settings.
+. *Save* (material:save[]) the settings.
 
 [[table-paypal-template-container-v6]]
 .Linking template containers
@@ -166,7 +166,7 @@ Linking template containers:
 . From the drop-down list, select the data provider you want to link.
 . Select the container you want to link to the data provider. Pay attention to the explanations given in <<table-paypal-template-container-v5>>.
 . Repeat steps 5 and 6 for all data providers you want to link to containers.
-. *Save* (icon:save[role="green"]) the settings.
+. *Save* (material:save[]) the settings.
 
 [[table-paypal-template-container-v5]]
 .Linking template containers
@@ -404,7 +404,7 @@ Adapting language files:
 . On the right side, select the *Target language* from the drop-down list.
 . Expand the various sections in the *PayPal* area.
 . Enter the text for the individual text elements in the area of the target language.
-. *Save* (icon:save[role="green"]) the settings.
+. *Save* (material:save[]) the settings.
 . Deploy the plugin set again to apply these changes.
 
 By selecting *German* as the *Target language*, you can adapt the German labels for your online shop. The selected labels are then also applied in the back end, only the addition _Plugin: PayPal_ remains. This way, it remains traceable where a payment method comes from. Reload the back end to see the changes.
