--- a/docs/de-de/modules/artikel/pages/multipacks-pakete-sets-verwalten.adoc
+++ b/docs/de-de/modules/artikel/pages/multipacks-pakete-sets-verwalten.adoc
@@ -28,6 +28,9 @@ a| *_Beispiel_*: 1 Flasche Wasser, eine Packung mit 6 Flaschen und eine Packung 
 * Die Hauptvariante entspricht der kleinsten Verkaufseinheit des Produkts, z.B. 1 Flasche.
 * Alle weiteren Varianten sind Kombinationen dieser kleinsten Verkaufseinheit, z.B. 6 oder 12 Flaschen.
 * Bestand wird nur an der Hauptvariante verwaltet.
+* Alle Varianten haben dieselben Attribute.
+Endkunden können also nicht z.B. zwischen verschiedenen Farben oder Größen wählen.
+Sie können nur zwischen den verschiedenen Stückzahlen wählen.
 |Multipack
 
 |
